refactor(test): update SaleDetailServiceTest to improve clarity and functionality